No Local Test Failures

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -15,3 +15,11 @@ two:
   name: MyString
   email: MyString
   title: MyString
+
+three:
+  admin: true
+  moderator: true
+  persistent_id: MyString
+  name: MyString
+  email: MyString
+  title: MyString
