--- a/test/fixtures/baskets.yml
+++ b/test/fixtures/baskets.yml
@@ -1,7 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+basketOne:
   name: MyString
 
-two:
+basketTwo:
+  name: MyString
+
+basketThree:
+  name: MyString
+
+basketFour:
   name: MyString
