--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,13 +1,25 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user_id: MyString
+commentOne:
+  user: userOne
   time: 2017-01-24 13:34:02
   text: MyString
-  idea_id: MyString
+  idea: ideaOne
 
-two:
-  user_id: MyString
+commentTwo:
+  user: userTwo
   time: 2017-01-24 13:34:02
   text: MyString
-  idea_id: MyString
+  idea: ideaTwo
+
+commentThree:
+  user: userThree
+  time: 2017-01-24 13:34:02
+  text: MyString
+  idea: ideaThree
+
+commentFour:
+  user: userFour
+  time: 2017-01-24 13:34:02
+  text: MyString
+  idea: ideaFour
