--- a/test/fixtures/likes.yml
+++ b/test/fixtures/likes.yml
@@ -1,11 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+likeOne:
   like_type: MyString
-  user_id: MyString
-  idea_id: MyString
+  user: userOne
+  idea: ideaOne
 
-two:
+likeTwo:
   like_type: MyString
-  user_id: MyString
-  idea_id: MyString
+  user: userTwo
+  idea: ideaTwo
+
+likeThree:
+  like_type: MyString
+  user: userThree
+  idea: ideaThree
+
+likeFour:
+  like_type: MyString
+  user: userFour
+  idea: ideaFour
