Revert "Fix comments tests"
This reverts commit cb0455470376b764b20837195ecdf441ba4dfb85.

--- a/test/fixtures/baskets.yml
+++ b/test/fixtures/baskets.yml
@@ -1,13 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-basketOne:
+one:
   name: MyString
 
-basketTwo:
-  name: MyString
-
-basketThree:
-  name: MyString
-
-basketFour:
+two:
   name: MyString
