--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,25 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-commentOne:
-  user: userOne
+one:
+  user_id: MyString
   time: 2017-01-24 13:34:02
   text: MyString
-  idea: ideaOne
+  idea_id: MyString
 
-commentTwo:
-  user: userTwo
+two:
+  user_id: MyString
   time: 2017-01-24 13:34:02
   text: MyString
-  idea: ideaTwo
-
-commentThree:
-  user: userThree
-  time: 2017-01-24 13:34:02
-  text: MyString
-  idea: ideaThree
-
-commentFour:
-  user: userFour
-  time: 2017-01-24 13:34:02
-  text: MyString
-  idea: ideaFour
+  idea_id: MyString
