Show idea creator name

--- a/test/fixtures/histories.yml
+++ b/test/fixtures/histories.yml
@@ -4,6 +4,7 @@ historyOne:
   time: 2017-01-24 13:34:00
   basket: basketOne
   user: userOne
+  idea: ideaOne
 
 historyTwo:
   time: 2017-01-24 13:34:00
