--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ pickle-email-*.html
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
-.env
+#.env
 
 ## Environment normalization:
 /.bundle
