--- a/.env
+++ b/.env
@@ -1,14 +1,23 @@
 #SAML test configuration
 
 ## Local test idp
-SAML_IDP_SSO_TARGET_URL="http://localhost:4000/saml/auth"
-SAML_IDP_ENTITY_ID="http://localhost:4000/saml/auth"
-SAML_ASSERTION_CONSUMER_SERVICE_URL="http://localhost:3000/haka/auth/consume"
-SAML_MY_ENTITY_ID="http://localhost:3000/"
-SAML_IDP_CERT_FINGERPRINT="9E:65:2E:03:06:8D:80:F2:86:C7:6C:77:A1:D9:14:97:0A:4D:F4:4D"
-HAKA_STUDENT_NUMBER_FIELD="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress"
+#SAML_IDP_SSO_TARGET_URL="http://localhost:4000/saml/auth"
+#SAML_IDP_ENTITY_ID="http://localhost:4000/saml/auth"
+#SAML_ASSERTION_CONSUMER_SERVICE_URL="http://localhost:3000/haka/auth/consume"
+#SAML_MY_ENTITY_ID="http://localhost:3000/"
+#SAML_IDP_CERT_FINGERPRINT="9E:65:2E:03:06:8D:80:F2:86:C7:6C:77:A1:D9:14:97:0A:4D:F4:4D"
+#HAKA_STUDENT_NUMBER_FIELD="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress"
 
 
 
-
-
+## Haka test environment
+## Haka will redirect to https://hydea.localhost.fifi.fi:3001 after a successful login.
+SAML_IDP_SSO_TARGET_URL="https://testidp.funet.fi/idp/profile/SAML2/Redirect/SSO"
+SAML_IDP_ENTITY_ID="https://testidp.funet.fi/idp/shibboleth"
+SAML_ASSERTION_CONSUMER_SERVICE_URL="https://hydea.localhost.fifi.fi:3001/haka/auth/consume"
+SAML_MY_ENTITY_ID="http://hydea.localhost.fifi.fi:3000/"
+SAML_IDP_CERT_FINGERPRINT="" # actual cert required because assertions are encrypted
+SAML_IDP_CERT="$(cat cert/haka_testi_2015_sha2.crt)"   # Copy these from doc/example_certificates/
+SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key rgistered in Haka-test
+SAML_MY_CERT="$(cat cert/cert.pem)" # example cert registered in Haka-test
+SAML_NAME_IDENTIFIER_FORMAT="urn:oasis:names:tc:SAML:2.0:nameid-format:persistent"
