--- a/.env
+++ b/.env
@@ -17,9 +17,10 @@ SAML_IDP_ENTITY_ID="https://testidp.funet.fi/idp/shibboleth"
 SAML_ASSERTION_CONSUMER_SERVICE_URL="https://hydea.localhost.fifi.fi:3001/haka/auth/consume"
 SAML_MY_ENTITY_ID="https://hydea.localhost.fifi.fi"
 SAML_IDP_CERT_FINGERPRINT="" # actual cert required because assertions are encrypted
-SAML_IDP_CERT="$(cat cert/haka_testi_2015_sha2.crt)"   # Copy these from doc/example_certificates/
+SAML_IDP_CERT="$(cat cert/haka-test-idp.crt)"   # Copy these from doc/example_certificates/
 SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key rgistered in Haka-test
 SAML_MY_CERT="$(cat cert/cert.pem)" # example cert registered in Haka-test
+
 SAML_NAME_IDENTIFIER_FORMAT="urn:oasis:names:tc:SAML:2.0:nameid-format:persistent"
 
 
