--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@
 ## Haka will redirect to https://hydea.localhost.fifi.fi:3001 after a successful login.
 SAML_IDP_SSO_TARGET_URL="https://testidp.funet.fi/idp/profile/SAML2/Redirect/SSO"
 SAML_IDP_ENTITY_ID="https://testidp.funet.fi/idp/shibboleth"
-SAML_ASSERTION_CONSUMER_SERVICE_URL="https://blooming-everglades-37675.herokuapp.com/haka/auth/consume"
-SAML_MY_ENTITY_ID="https://blooming-everglades-37675.herokuapp.com"
+SAML_ASSERTION_CONSUMER_SERVICE_URL="https://hydea.localhost.fifi.fi:3001/haka/auth/consume"
+SAML_MY_ENTITY_ID="https://hydea.localhost.fifi.fi"
 SAML_IDP_CERT_FINGERPRINT="" # actual cert required because assertions are encrypted
 SAML_IDP_CERT="$(cat cert/haka-test-idp.crt)"   # Copy these from doc/example_certificates/
 SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key rgistered in Haka-test
