--- a/.env.test
+++ b/.env.test
@@ -20,8 +20,8 @@ SAML_IDP_ENTITY_ID="https://testidp.funet.fi/idp/shibboleth"
 SAML_ASSERTION_CONSUMER_SERVICE_URL="https://hydea-qa.herokuapp.com/haka/auth/consume"
 SAML_MY_ENTITY_ID="https://hydea-qa.herokuapp.com"
 SAML_IDP_CERT_FINGERPRINT="" # actual cert required because assertions are encrypted
-SAML_IDP_CERT="$(cat cert/haka-test-idp.crt)"
-SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key registered in Haka-test
+SAML_IDP_CERT="$(cat cert/haka-test-idp.crt)"   # Copy these from doc/example_certificates/
+SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key rgistered in Haka-test
 SAML_MY_CERT="$(cat cert/cert.pem)" # example cert registered in Haka-test
 
 SAML_NAME_IDENTIFIER_FORMAT="urn:oasis:names:tc:SAML:2.0:nameid-format:persistent"
