--- a/.env
+++ b/.env
@@ -12,10 +12,15 @@
 
 ## Haka test environment
 ## Haka will redirect to https://hydea.localhost.fifi.fi:3001 after a successful login.
+
+HAKA_METADATA_URL="https://rr.funet.fi/rr/metadata.php?view&type=sp&id=843&fed=1"
+
 SAML_IDP_SSO_TARGET_URL="https://testidp.funet.fi/idp/profile/SAML2/Redirect/SSO"
 SAML_IDP_ENTITY_ID="https://testidp.funet.fi/idp/shibboleth"
 SAML_ASSERTION_CONSUMER_SERVICE_URL="https://hydea.localhost.fifi.fi:3001/haka/auth/consume"
+#SAML_ASSERTION_CONSUMER_SERVICE_URL="https://hydea-qa.herokuapp.com/haka/auth/consume"
 SAML_MY_ENTITY_ID="https://hydea.localhost.fifi.fi"
+#SAML_MY_ENTITY_ID="https://hydea-qa.herokuapp.com"
 SAML_IDP_CERT_FINGERPRINT="" # actual cert required because assertions are encrypted
 SAML_IDP_CERT="$(cat cert/haka-test-idp.crt)"
 SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key registered in Haka-test
@@ -24,8 +29,9 @@ SAML_MY_CERT="$(cat cert/cert.pem)" # example cert registered in Haka-test
 SAML_NAME_IDENTIFIER_FORMAT="urn:oasis:names:tc:SAML:2.0:nameid-format:persistent"
 
 
-HAKA_PERSONALUNIQUECODE="urn:oid:1.3.6.1.4.1.25178.1.2.14"
-HAKA_MAIL="urn:oid:0.9.2342.19200300.100.1.3"
-HAKA_DISPLAYNAME="urn:oid:2.16.840.1.113730.3.1.241"
-HAKA_HOMEORGANIZATION="urn:oid:1.3.6.1.4.1.25178.1.2.9"
+##Testing attributes
+#HAKA_PERSONALUNIQUECODE="urn:oid:1.3.6.1.4.1.25178.1.2.14"
+#HAKA_MAIL="urn:oid:0.9.2342.19200300.100.1.3"
+#HAKA_DISPLAYNAME="urn:oid:2.16.840.1.113730.3.1.241"
+#HAKA_HOMEORGANIZATION="urn:oid:1.3.6.1.4.1.25178.1.2.9"
 
