--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-#SAML test configuration
+#SAML production configuration
 
-# Heroku settings for testIDP
+# Heroku settings for production IDP
 
 HAKA_METADATA_URL="https://rr.funet.fi/rr/metadata.php?view&type=sp&id=843&fed=1"
 
@@ -14,6 +14,3 @@ SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key rgistered in Hak
 SAML_MY_CERT="$(cat cert/cert.pem)" # example cert registered in Haka-test
 
 SAML_NAME_IDENTIFIER_FORMAT="urn:oasis:names:tc:SAML:2.0:nameid-format:persistent"
-
-
-
