Travis deploys to Heroku

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,12 @@ before_install:
   - docker build -t hydea .
   - docker run hydea /bin/sh -c "cd /usr/src/app; bundle exec rspec" 
 before_script: bundle exec rake db:migrate RAILS_ENV=test
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "integration" ]; then
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" registry.heroku.com;
+    docker tag hydea registry.heroku.com/hydea/web
+    docker push registry.heroku.com/hydea/web
+    fi
 deploy:
   provider: heroku
   api_key:
