Check Haka server metadata (testconfig), positive test

--- a/.env.development
+++ b/.env.development
@@ -19,6 +19,9 @@
 #HAKA_METADATA_URL="https://rr.funet.fi/rr/metadata.php?view&type=sp&id=843&fed=1"
 HAKA_METADATA_URL="https://rr.funet.fi/rr/metadata.php?view&type=sp&id=846&fed=1"
 
+HAKA_TESTSERVER_METADATA_URL="https://haka.funet.fi/metadata/haka_test_metadata_signed.xml"
+HAKA_TESTSERVER_SIGN_CERT="$(cat cert/haka_testi_2015_sha2.crt)"
+
 SAML_IDP_SSO_TARGET_URL="https://testidp.funet.fi/idp/profile/SAML2/Redirect/SSO"
 SAML_IDP_ENTITY_ID="https://testidp.funet.fi/idp/shibboleth"
 SAML_ASSERTION_CONSUMER_SERVICE_URL="https://hydea.localhost.fifi.fi:3001/haka/auth/consume"
