Revert "Merge branch 'MS-5-Docker' into integration"
This reverts commit baeac8ad290bcdd0fa82772cefc09b04d7e93ddf, reversing
changes made to 7437252c01f09564913e39f06ad799072be17ad5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ before_script: bundle exec rake db:migrate RAILS_ENV=test
 after_success:
   - if [ "$TRAVIS_BRANCH" == "integration" ]; then
     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" registry.heroku.com;
-    docker tag hydea registry.heroku.com/hydea-qa/web
-    docker push registry.heroku.com/hydea-qa/web
+    docker tag hydea registry.heroku.com/hydea/web
+    docker push registry.heroku.com/hydea/web
     fi
 deploy:
   provider: heroku
