Revert "Merge branch 'bringing-it-all-together' into integration"
This reverts commit 7437252c01f09564913e39f06ad799072be17ad5, reversing
changes made to ab91a00afecab1fd86a351cb603825a3e7aa69b0.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-sudo: required
-services:
-  - docker
 language: ruby
 rvm:
 - 2.3.1
@@ -12,17 +9,8 @@ branches:
   only:
   - master
   - integration
-before_install:
-  - sudo apt-get install -y xmlsec1 libxmlsec1-dev
-  - docker build -t hydea .
-  - docker run hydea /bin/sh -c "cd /usr/src/app; bundle exec rspec" 
 before_script: bundle exec rake db:migrate RAILS_ENV=test
-after_success:
-  - if [ "$TRAVIS_BRANCH" == "integration" ]; then
-    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" registry.heroku.com;
-    docker tag hydea registry.heroku.com/hydea/web
-    docker push registry.heroku.com/hydea/web
-    fi
+before_install: sudo apt-get install -y xmlsec1 libxmlsec1-dev
 deploy:
   provider: heroku
   api_key:
