--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ branches:
   - integration
 before_install:
   - docker build -t hydea .
-  - docker run hydea /bin/sh -c "cd /usr/src/app; bundle exec rspec"
+  #- docker run hydea /bin/sh -c "cd /usr/src/app; bundle exec rspec"
 before_script: bundle exec rake db:migrate RAILS_ENV=test
 after_success:
   - if [ "$TRAVIS_BRANCH" == "integration" ]; then
