--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,11 @@ after_success:
     docker tag hydea registry.heroku.com/hydea-qa/web;
     docker push registry.heroku.com/hydea-qa/web;
     fi
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" registry.heroku.com;
+    docker tag hydea registry.heroku.com/kuuma-munakas-1337/web;
+    docker push registry.heroku.com/kuuma-munakas-1337/web;
+    fi
 # deploy:
 #   provider: heroku
 #   api_key:
