--- a/.env.development
+++ b/.env.development
@@ -34,3 +34,5 @@ SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key rgistered in Hak
 SAML_MY_CERT="$(cat cert/cert.pem)" # example cert registered in Haka-test
 
 SAML_NAME_IDENTIFIER_FORMAT="urn:oasis:names:tc:SAML:2.0:nameid-format:persistent"
+
+RAILS_MAX_THREADS=2
