Haka variables need .env's for tests

--- a/.env.development
+++ b/.env.development
@@ -21,6 +21,7 @@ HAKA_METADATA_URL="https://rr.funet.fi/rr/metadata.php?view&type=sp&id=846&fed=1
 
 HAKA_TESTSERVER_METADATA_URL="https://haka.funet.fi/metadata/haka_test_metadata_signed.xml"
 HAKA_TESTSERVER_SIGN_CERT="$(cat cert/haka_testi_2015_sha2.crt)"
+HAKA_SERVER_SIGN_CERT="$(cat cert/haka_testi_2015_sha2.crt)"
 
 SAML_IDP_SSO_TARGET_URL="https://testidp.funet.fi/idp/profile/SAML2/Redirect/SSO"
 SAML_IDP_ENTITY_ID="https://testidp.funet.fi/idp/shibboleth"
