--- a/.env.test
+++ b/.env.test
@@ -13,7 +13,10 @@
 ## Haka test environment
 ## Haka will redirect to https://hydea.localhost.fifi.fi:3001 after a successful login.
 
-HAKA_METADATA_URL="https://rr.funet.fi/rr/metadata.php?view&type=sp&id=843&fed=1"
+#HAKA_METADATA_URL="https://rr.funet.fi/rr/metadata.php?view&type=sp&id=843&fed=1"
+
+HAKA_METADATA_URL="https://haka.funet.fi/metadata/haka_test_metadata_signed.xml"
+HAKA_SERVER_SIGN_CERT="$(cat cert/haka_testi_2015_sha2.crt)"
 
 HAKA_TESTSERVER_METADATA_URL="https://haka.funet.fi/metadata/haka_test_metadata_signed.xml"
 HAKA_TESTSERVER_SIGN_CERT="$(cat cert/haka_testi_2015_sha2.crt)"
