--- a/.env.test
+++ b/.env.test
@@ -2,7 +2,7 @@
 
 ## Local test idp
 ## Haka test environment
-## Haka will redirect to https://hydea.localhost.fifi.fi:3001 after a successful login.
+## Haka will redirect to https://ideoi.localhost.fifi.fi:3001 after a successful login.
 
 
 HAKA_METADATA_URL="https://haka.funet.fi/metadata/haka_test_metadata_signed.xml"
@@ -12,8 +12,8 @@ HAKA_TESTSERVER_SIGN_CERT="$(cat cert/haka_testi_2015_sha2.crt)"
 
 SAML_IDP_SSO_TARGET_URL="https://testidp.funet.fi/idp/profile/SAML2/Redirect/SSO"
 SAML_IDP_ENTITY_ID="https://testidp.funet.fi/idp/shibboleth"
-SAML_ASSERTION_CONSUMER_SERVICE_URL="https://hydea.localhost.fifi.fi:3001/haka/auth/consume"
-SAML_MY_ENTITY_ID="https://hydea.localhost.fifi.fi"
+SAML_ASSERTION_CONSUMER_SERVICE_URL="https://ideoi.localhost.fifi.fi:3001/haka/auth/consume"
+SAML_MY_ENTITY_ID="https://ideoi.localhost.fifi.fi"
 SAML_IDP_CERT_FINGERPRINT="" # actual cert required because assertions are encrypted
 SAML_IDP_CERT="$(cat cert/haka-test-idp.crt)"   # Copy these from doc/example_certificates/
 SAML_MY_PRIVATE_KEY="$(cat cert/key.pem)" # example private key rgistered in Haka-test
